--- a/content/creating-editing.html
+++ b/content/creating-editing.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-07">
+<meta name="dcterms.date" content="2024-05-09">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 7, 2024</p>
+        <p class="date">May 9, 2024</p>
       </div>
     </div>
     
@@ -105,7 +105,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#query-data" id="toc-query-data" class="nav-link" data-scroll-target="#query-data">Query Data</a></li>
   <li><a href="#copy-and-paste-data" id="toc-copy-and-paste-data" class="nav-link" data-scroll-target="#copy-and-paste-data">Copy and Paste Data</a></li>
   <li><a href="#edit-data" id="toc-edit-data" class="nav-link" data-scroll-target="#edit-data">Edit Data</a></li>
-  <li><a href="#screenshot" id="toc-screenshot" class="nav-link" data-scroll-target="#screenshot">Screenshot</a></li>
+  <li><a href="#upload-changes" id="toc-upload-changes" class="nav-link" data-scroll-target="#upload-changes">Upload Changes</a></li>
   </ul></li>
   </ul>
 </nav>
@@ -122,20 +122,20 @@ ul.task-list li input[type="checkbox"] {
 <section id="checking-out-data" class="level3">
 <h3 class="anchored" data-anchor-id="checking-out-data">Checking Out Data</h3>
 <p>Checking out data is required in order to edit data. Before we can check it out, you must have the data in your selected set. In most cases, that means running a query against the national database and against the local database. For this exercise, a temporary project has been created with the project name matching your NASIS username. Run the query “Project by project name” found in the NSSC Pangaea folder and use your NASIS username as the project name, for example “Hammerly, John”. Remember, you will need to first query the national database, accept the data and then run against local database to get it into your selected set. Now open the project table to see your project.</p>
-<p><img src="4-1-checkout.png" class="img-fluid"></p>
+<p><img src="4-1-checkout.png" title="NASIS Client Project table with NASIS-TRAINING-1 User Project ID and Project Name highlighted" class="img-fluid" alt="NASIS Client Project table with NASIS-TRAINING-1 User Project ID and Project Name highlighted"></p>
 <p>Notice the grey inactive edit buttons at bottom of the screen since I have not checked out this row those actions are not available.</p>
 <p>Highlight row of the project you just loaded by clicking it, then click the check out selected trees button:</p>
-<p><img src="4-1-checkout-button.png" class="img-fluid"></p>
+<p><img src="4-1-checkout-button.png" title="NASIS Client Table toolbar with Check Out Selected Trees button highlighted" class="img-fluid" alt="NASIS Client Table toolbar with Check Out Selected Trees button highlighted"></p>
 <p>A letter “E” will appear in the row you checked out indicating edits can now be completed on the data</p>
-<p><img src="4-1-checkout-edit.png" class="img-fluid"></p>
+<p><img src="4-1-checkout-edit.png" title="NASIS Client Project table with letter E at left of NASIS-TRAINING-1 User Project ID and Project Name row that is highlighted" class="img-fluid" alt="NASIS Client Project table with letter E at left of NASIS-TRAINING-1 User Project ID and Project Name row that is highlighted"></p>
 <p>The status messages window will also update indicating which record was checked out:</p>
-<p><img src="4-1-checkout-status.png" class="img-fluid"></p>
+<p><img src="4-1-checkout-status.png" title="NASIS Client Status Messages window containing a message that project record ID 227403 is checked out" class="img-fluid" alt="NASIS Client Status Messages window containing a message that project record ID 227403 is checked out"></p>
 <p>Take a screenshot of the row checked out and save to submit to your exercise submission folder.</p>
 </section>
 <section id="checking-in-data" class="level3">
 <h3 class="anchored" data-anchor-id="checking-in-data">Checking In Data</h3>
 <p>You can check data out and back in again as long as you did not make any changes. For this exercise we will not make changes. Check the row back in using the “Check in Selected Trees” button:</p>
-<p><img src="4-1-checkin.png" class="img-fluid"></p>
+<p><img src="4-1-checkin.png" title="NASIS Client Table toolbar with Check In Selected Trees button highlighted" class="img-fluid" alt="NASIS Client Table toolbar with Check In Selected Trees button highlighted"></p>
 </section>
 <section id="submit-screenshot" class="level3">
 <h3 class="anchored" data-anchor-id="submit-screenshot">Submit Screenshot</h3>
@@ -148,15 +148,15 @@ ul.task-list li input[type="checkbox"] {
 <section id="creating-new-data" class="level3">
 <h3 class="anchored" data-anchor-id="creating-new-data">Creating New Data</h3>
 <p>New data is added by first opening a table you want to add data to for this exercise open the project table. Use green plus button at bottom left of screen to add a new row:</p>
-<p><img src="4-2-add-row.png" class="img-fluid"></p>
+<p><img src="4-2-add-row.png" title="NASIS Client data record action buttons" class="img-fluid" alt="NASIS Client data record action buttons with the add new row button depressed"></p>
 <p>Alternatively, you can use your mouse to click in a blank row, in the column you want to add data to. When creating new project, there are some data columns that are required. The columns in bold text indicate which are required. Some required data must be manually populated. Other required data will be populated with a default if not altered (examples: project approved and completed will populate unchecked).</p>
 <p>There is not a visual indicator as to which column must be manually populated, but generally, the checkboxes will default all others will not. if required data is not populated, an error will appear if you end your edit before populating it with data:</p>
-<p><img src="4-2-error.png" class="img-fluid"></p>
+<p><img src="4-2-error.png" title="NASIS Client Error window indicating a non-blank entry is required in User Project ID and Project Name" class="img-fluid" alt="NASIS Client Error window indicating a non-blank entry is required in User Project ID and Project Name"></p>
 <p>As outlined in the message, you can choose to go back and fix the issue, or you can give up and the new row you were attempting to add will be removed.</p>
 <p>Enter “NASIS-BASIC-TEMP” into the User Project ID column. For the Project Name, enter your NASIS username and add a space and type NEW after it. To finish adding the row click the green checkmark button or click on your screen away from the row.</p>
-<p><img src="4-2-check.png" class="img-fluid"></p>
+<p><img src="4-2-check.png" title="NASIS Client data record action buttons with the end edit button depressed" class="img-fluid" alt="NASIS Client data record action buttons with the end edit button depressed"></p>
 <p>Your new data now exists locally, but the changes have not been uploaded to the National Database. To do this click the “Upload All Changes to National Database” button:</p>
-<p><img src="4-2-upload-button.png" class="img-fluid"></p>
+<p><img src="4-2-upload-button.png" title="NASIS Client NASIS toolbar with the Upload All Changes to National Database button highlighted" class="img-fluid" alt="NASIS Client NASIS toolbar with the Upload All Changes to National Database button highlighted"></p>
 <p>Finally, after completing the upload, check the data back in using the method covered in the previous exercise.</p>
 </section>
 <section id="submit-screenshot-1" class="level3">
@@ -174,18 +174,18 @@ ul.task-list li input[type="checkbox"] {
 <section id="copy-and-paste-data" class="level3">
 <h3 class="anchored" data-anchor-id="copy-and-paste-data">Copy and Paste Data</h3>
 <p>Select the row in the site table you loaded into your selected set and use the copy selected rows button to copy the site:</p>
-<p><img src="4-3-copy-row.png" class="img-fluid"></p>
+<p><img src="4-3-copy-row.png" title="NASIS Client Table toolbar with the copy selected rows button highlighted" class="img-fluid" alt="NASIS Client Table toolbar with the copy selected rows button highlighted"></p>
 <p>A status message will display indicating it was successfully copied.</p>
-<p><img src="4-3-copy-status.png" class="img-fluid"></p>
-<p>Now paste the data using the paste new rows/trees button: <img src="4-3-paste.png" class="img-fluid"></p>
+<p><img src="4-3-copy-status.png" title="NASIS Client Status Messages window containing messages of when the copy selected rows command started and when the command was successfully completed" class="img-fluid" alt="NASIS Client Status Messages window containing messages of when the copy selected rows command started and when the command was successfully completed"></p>
+<p>Now paste the data using the paste new rows/trees button: <img src="4-3-paste.png" title="NASIS Client Tables toolbar with the Paste Rows/Trees (Inserting New Rows) button highlighted" class="img-fluid" alt="NASIS Client Tables toolbar with the Paste Rows/Trees (Inserting New Rows) button highlighted"></p>
 </section>
 <section id="edit-data" class="level3">
 <h3 class="anchored" data-anchor-id="edit-data">Edit Data</h3>
-<p>Since you made a copy of the data with the new data you pasted you can immediately start editing data. If you were to edit existing data, you would need to check it out first. Add your NASIS username to the end of the User Site ID and change the coordinate source to “unknown” notice you can only enter the choices listed, then end your edit. Then expand the site table to view the child tables. The site observation table should now be visible. Add a site observation date matching today’s date and add your name to the data collector column. Finish your edits, upload all changes to National Database, and check the data back in.</p>
+<p>Since you made a copy of the data with the new data you pasted you can immediately start editing data. If you were to edit existing data, you would need to check it out first. Add your NASIS username to the end of the User Site ID and change the coordinate source to “unknown” notice you can only enter the choices listed, then end your edit. Then expand the site table to view the child tables. The site observation table should now be visible. Add a site observation date matching today’s date and add your name to the data collector column.</p>
 </section>
-<section id="screenshot" class="level3">
-<h3 class="anchored" data-anchor-id="screenshot">Screenshot</h3>
-<p>Submit your screenshot of your edited data by placing it in your exercise submission folder to complete the exercise.</p>
+<section id="upload-changes" class="level3">
+<h3 class="anchored" data-anchor-id="upload-changes">Upload Changes</h3>
+<p>When you have completed the data edits, upload all changes to National Database, and check the data back in. Your mentor will review the NASIS entry.</p>
 <p><strong>End of Exercise</strong></p>
 </section>
 </section>
