--- a/content/navigation.html
+++ b/content/navigation.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-07">
+<meta name="dcterms.date" content="2024-05-08">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 7, 2024</p>
+        <p class="date">May 8, 2024</p>
       </div>
     </div>
     
@@ -103,14 +103,14 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#customize-the-table-view" id="toc-customize-the-table-view" class="nav-link" data-scroll-target="#customize-the-table-view">Customize the Table View</a></li>
   <li><a href="#customize-the-visible-columns" id="toc-customize-the-visible-columns" class="nav-link" data-scroll-target="#customize-the-visible-columns">Customize the Visible Columns</a></li>
   <li><a href="#customize-the-toolbar" id="toc-customize-the-toolbar" class="nav-link" data-scroll-target="#customize-the-toolbar">Customize the Toolbar</a></li>
-  <li><a href="#capture-screen-and-send-to-mentor" id="toc-capture-screen-and-send-to-mentor" class="nav-link" data-scroll-target="#capture-screen-and-send-to-mentor">Capture Screen and Send to Mentor</a></li>
+  <li><a href="#submit-screenshots" id="toc-submit-screenshots" class="nav-link" data-scroll-target="#submit-screenshots">Submit Screenshots</a></li>
   <li><a href="#restore-customizations" id="toc-restore-customizations" class="nav-link" data-scroll-target="#restore-customizations">Restore Customizations</a></li>
   </ul></li>
   <li><a href="#exercise-2.3-sort-and-filter" id="toc-exercise-2.3-sort-and-filter" class="nav-link" data-scroll-target="#exercise-2.3-sort-and-filter">Exercise 2.3 – Sort and Filter</a>
   <ul class="collapse">
   <li><a href="#sorting" id="toc-sorting" class="nav-link" data-scroll-target="#sorting">Sorting</a></li>
   <li><a href="#filtering" id="toc-filtering" class="nav-link" data-scroll-target="#filtering">Filtering</a></li>
-  <li><a href="#send-screenshots-to-mentor" id="toc-send-screenshots-to-mentor" class="nav-link" data-scroll-target="#send-screenshots-to-mentor">Send Screenshots to Mentor</a></li>
+  <li><a href="#submit-screenshots-1" id="toc-submit-screenshots-1" class="nav-link" data-scroll-target="#submit-screenshots-1">Submit Screenshots</a></li>
   <li><a href="#remove-filters-and-sorting" id="toc-remove-filters-and-sorting" class="nav-link" data-scroll-target="#remove-filters-and-sorting">Remove Filters and Sorting</a></li>
   </ul></li>
   </ul>
@@ -136,25 +136,25 @@ ul.task-list li input[type="checkbox"] {
 <section id="refresh" class="level3">
 <h3 class="anchored" data-anchor-id="refresh">Refresh</h3>
 <p>The first and most important task after login to the NASIS client is the refresh process. The data you have locally on your computer is only as up to date as the last time you refreshed your data. This means any new or changed data will not be visible to you unless you initiate the refresh process. This can be done by clicking the NASIS menu and selecting Refresh Local Database.</p>
-<p><img src="2-1-refresh.png" class="img-fluid"></p>
+<p><img src="2-1-refresh.png" title="NASIS Client NASIS menu with Refresh Local Database menu option highlighted" class="img-fluid" alt="NASIS Client NASIS menu with Refresh Local Database menu option highlighted"></p>
 <p>Perform the refresh on your local database and ensure it was successful. You will see a status box appear:</p>
-<p><img src="2-1-refresh-steps.png" class="img-fluid"></p>
+<p><img src="2-1-refresh-steps.png" title="NASIS Client Refresh Local Database window" class="img-fluid" alt="NASIS Client Refresh Local Database window"></p>
 <p>Depending on when you last refreshed your data and how many edits have been completed or new data added it may take a few minutes. This is yet another reason to refresh your data as the first thing you do, every time you start NASIS. The more often you refresh, the less data you download and the less time it will take. You should also see a status message indicating the refresh has completed.</p>
-<p><img src="2-1-refresh-status.png" class="img-fluid"></p>
+<p><img src="2-1-refresh-status.png" title="NASIS Client Status Messages window" class="img-fluid" alt="NASIS Client Status Messages window"></p>
 <p>Occasionally, you may find the refresh is taking an unusually long time, which can be caused by a poor connection to NASIS or because of issues with the National NASIS server. You can cancel the refresh as long as the cancel button remains on the screen, but after a certain point, the refresh can no longer be cancelled, and you must allow it to complete.</p>
 </section>
 <section id="default-nasis-group" class="level3">
 <h3 class="anchored" data-anchor-id="default-nasis-group">Default NASIS Group</h3>
 <p>If you completed the NASIS pre-course assignment, this next process should be familiar to you. Click on the NASIS menu and select “Manage User Profile”.</p>
-<p><img src="nasis-menu-user-screen.png" class="img-fluid"></p>
+<p><img src="nasis-menu-user-screen.png" title="NASIS Client NASIS menu with the Manage User Profile... option highlighted" class="img-fluid" alt="NASIS Client NASIS menu with the Manage User Profile... option highlighted"></p>
 <p>Note your current default NASIS group and remember it. We will be using a special training group for the duration of the training, and you will need to switch back to this previous group once the training is over. Select the “Basic NASIS Training Group” from the list. If you do not see this group reach out to your mentor to confirm you have been added to the group in NASIS. It is possible your name was missed, or another name was added inadvertently.</p>
-<p><img src="2-1-group.png" class="img-fluid"></p>
+<p><img src="2-1-group.png" title="NASIS Client NASIS Group choice list with Basic NASIS Training Group highlighted" class="img-fluid" alt="NASIS Client NASIS Group choice list with Basic NASIS Training Group highlighted"></p>
 <p>Remember, you must also click the save button before closing the Manage User Profile window to keep any of the changes you have made.</p>
 </section>
 <section id="upload-changes" class="level3">
 <h3 class="anchored" data-anchor-id="upload-changes">Upload Changes</h3>
 <p>The final step to commit the changes you have made to your user profile is to upload all changes to the national database. Do this by selecting the “Upload All Changes to National Database” menu option.</p>
-<p><img src="2-1-upload.png" class="img-fluid"></p>
+<p><img src="2-1-upload.png" title="NASIS Client NASIS menu with Upload All Changes to National Database option highlighted" class="img-fluid" alt="NASIS Client NASIS menu with Upload All Changes to National Database option highlighted"></p>
 <p><strong>End of Exercise</strong></p>
 </section>
 </section>
@@ -176,9 +176,9 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="customize-the-toolbar">Customize the Toolbar</h3>
 <p>Customize the toolbar by re-arranging the button order and toolbar position. Choose any button and toolbar.</p>
 </section>
-<section id="capture-screen-and-send-to-mentor" class="level3">
-<h3 class="anchored" data-anchor-id="capture-screen-and-send-to-mentor">Capture Screen and Send to Mentor</h3>
-<p>Once you have completed your customizations above, capture a screenshot and write an explanation of the customizations you have completed and send this to your mentor.</p>
+<section id="submit-screenshots" class="level3">
+<h3 class="anchored" data-anchor-id="submit-screenshots">Submit Screenshots</h3>
+<p>Once you have completed your customizations above, capture a screenshot and write an explanation of the customizations you have completed and submit them by placing them in a new created folder with your name in the exercise submission folder on the Microsoft Teams training site.</p>
 </section>
 <section id="restore-customizations" class="level3">
 <h3 class="anchored" data-anchor-id="restore-customizations">Restore Customizations</h3>
@@ -203,9 +203,9 @@ ul.task-list li input[type="checkbox"] {
 <p>Use the auto-filter row by right clicking on the column name and selecting “Show Auto Filter Row”. A new row appears at the top of the table separated by a thicker gray line. The filter operates as you type the filter criteria into the column you wish to filter. The icon at the left of each column can be clicked to select the filtering method.</p>
 <p>Practice using the auto-filter row on the columns and take a screenshot of the filtered results and save to send to your mentor.</p>
 </section>
-<section id="send-screenshots-to-mentor" class="level3">
-<h3 class="anchored" data-anchor-id="send-screenshots-to-mentor">Send Screenshots to Mentor</h3>
-<p>Send all your screenshots taken during the exercise to your mentor and describe the sorting and filtering you completed.</p>
+<section id="submit-screenshots-1" class="level3">
+<h3 class="anchored" data-anchor-id="submit-screenshots-1">Submit Screenshots</h3>
+<p>Submit all your screenshots taken during the exercise by placing them in your folder in the exercise submission folder on Microsoft Teams and describe the sorting and filtering you completed.</p>
 </section>
 <section id="remove-filters-and-sorting" class="level3">
 <h3 class="anchored" data-anchor-id="remove-filters-and-sorting">Remove Filters and Sorting</h3>
