--- a/content/project.html
+++ b/content/project.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-07">
+<meta name="dcterms.date" content="2024-05-08">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 7, 2024</p>
+        <p class="date">May 8, 2024</p>
       </div>
     </div>
     
@@ -117,8 +117,7 @@ ul.task-list li input[type="checkbox"] {
 <p>The main goal of this exercise is to get some practice entering and editing data within the context of a project, and develop an understanding of the importance of keeping data consistent between the columns and tables. Practice the following:</p>
 <ul>
 <li>Write a project description and add it to the project description column</li>
-<li>Find similar named mapunits to add to the project mapunit table</li>
-<li>Add an ecological site to the project ecological site table</li>
+<li>Find similar named mapunits to add to the project mapunit table (find a query that loads map units by map unit name, then use % as a wildcard)</li>
 <li>Add milestones and dates to the project milestone table</li>
 <li>Add yourself as a project staff member</li>
 <li>Add project type, subtype and MLRA SSO Area</li>
