--- a/content/forms.html
+++ b/content/forms.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-07">
+<meta name="dcterms.date" content="2024-05-08">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 7, 2024</p>
+        <p class="date">May 8, 2024</p>
       </div>
     </div>
     
@@ -123,7 +123,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="screenshot" class="level3">
 <h3 class="anchored" data-anchor-id="screenshot">Screenshot</h3>
-<p>Submit a screenshot of the form and place it in your exercise submission folder to complete the exercise. If do not find any errors take a screen shot of the last component&nbsp;</p>
+<p>Submit a screenshot of the form and place it in your exercise submission folder to complete the exercise. If do not find any errors take a screen shot of the last component</p>
 </section>
 </section>
 
