--- a/content/index.html
+++ b/content/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-07">
+<meta name="dcterms.date" content="2024-05-08">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 7, 2024</p>
+        <p class="date">May 8, 2024</p>
       </div>
     </div>
     
@@ -92,21 +92,45 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="browse-course-exercises" class="level2">
 <h2 class="anchored" data-anchor-id="browse-course-exercises">Browse Course Exercises</h2>
-<ul>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/pre-course.html">0. Pre-course Assignment</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/introduction.html">1. Introduction</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/navigation.html">2. Navigation</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/query-load.html">3. Querying and Loading Data</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/creating-editing.html">4. Creating and Editing Data</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/reports.html">5. Reading and Running Reports</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/import.html">6. Importing New Data</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/forms.html">7. Using Forms</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/calcvals.html">8. Calculations, Validations, and Interpretations</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/mindata.html">9. Minimum Data Standards</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/project.html">10. Project Management</a></li>
-<li><a href="https://ncss-tech.github.io/nasis_training/content/tss.html">11. Technical Soil Services Management</a></li>
-<li><a href="">12. Ecological and Vegetation Data</a></li>
-</ul>
+<section id="pre-course-assignment" class="level5">
+<h5 class="anchored" data-anchor-id="pre-course-assignment">0. <a href="https://ncss-tech.github.io/nasis_training/content/pre-course.html">Pre-course Assignment</a></h5>
+</section>
+<section id="introduction" class="level5">
+<h5 class="anchored" data-anchor-id="introduction">1. <a href="https://ncss-tech.github.io/nasis_training/content/introduction.html">Introduction</a></h5>
+</section>
+<section id="navigation" class="level5">
+<h5 class="anchored" data-anchor-id="navigation">2. <a href="https://ncss-tech.github.io/nasis_training/content/navigation.html">Navigation</a></h5>
+</section>
+<section id="querying-and-loading-data" class="level5">
+<h5 class="anchored" data-anchor-id="querying-and-loading-data">3. <a href="https://ncss-tech.github.io/nasis_training/content/query-load.html">Querying and Loading Data</a></h5>
+</section>
+<section id="creating-and-editing-data" class="level5">
+<h5 class="anchored" data-anchor-id="creating-and-editing-data">4. <a href="https://ncss-tech.github.io/nasis_training/content/creating-editing.html">Creating and Editing Data</a></h5>
+</section>
+<section id="reading-and-running-reports" class="level5">
+<h5 class="anchored" data-anchor-id="reading-and-running-reports">5. <a href="https://ncss-tech.github.io/nasis_training/content/reports.html">Reading and Running Reports</a></h5>
+</section>
+<section id="importing-new-data" class="level5">
+<h5 class="anchored" data-anchor-id="importing-new-data">6. <a href="https://ncss-tech.github.io/nasis_training/content/import.html">Importing New Data</a></h5>
+</section>
+<section id="using-forms" class="level5">
+<h5 class="anchored" data-anchor-id="using-forms">7. <a href="https://ncss-tech.github.io/nasis_training/content/forms.html">Using Forms</a></h5>
+</section>
+<section id="calculations-validations-and-interpretations" class="level5">
+<h5 class="anchored" data-anchor-id="calculations-validations-and-interpretations">8. <a href="https://ncss-tech.github.io/nasis_training/content/calcsvals.html">Calculations, Validations, and Interpretations</a></h5>
+</section>
+<section id="minimum-data-standards" class="level5">
+<h5 class="anchored" data-anchor-id="minimum-data-standards">9. <a href="https://ncss-tech.github.io/nasis_training/content/mindata.html">Minimum Data Standards</a></h5>
+</section>
+<section id="project-management" class="level5">
+<h5 class="anchored" data-anchor-id="project-management">10. <a href="https://ncss-tech.github.io/nasis_training/content/project.html">Project Management</a></h5>
+</section>
+<section id="technical-soil-services-management" class="level5">
+<h5 class="anchored" data-anchor-id="technical-soil-services-management">11. <a href="https://ncss-tech.github.io/nasis_training/content/tss.html">Technical Soil Services Management</a></h5>
+</section>
+<section id="ecological-and-vegetation-data" class="level5">
+<h5 class="anchored" data-anchor-id="ecological-and-vegetation-data">12. Ecological and Vegetation Data</h5>
+</section>
 </section>
 
 </main>
