--- a/content/pre-course.html
+++ b/content/pre-course.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-06">
+<meta name="dcterms.date" content="2024-05-08">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 6, 2024</p>
+        <p class="date">May 8, 2024</p>
       </div>
     </div>
     
@@ -134,16 +134,16 @@ ul.task-list li input[type="checkbox"] {
 <section id="locate-the-nasis-editor" class="level3">
 <h3 class="anchored" data-anchor-id="locate-the-nasis-editor">Locate the NASIS Editor</h3>
 <p>Locate the NASIS Editor Client Software and execute it by browsing to the shortcut in the windows start menu. You will find it within the folder “USDA Applications”:</p>
-<p><img src="start-screen.png" class="img-fluid"></p>
+<p><img src="start-screen.png" title="NASISEditor icon and text shortcut highlighted in the Windows Start menu program list" class="img-fluid" alt="NASISEditor icon and text shortcut highlighted in the Windows Start menu program list"></p>
 </section>
 <section id="alternate-method" class="level3">
 <h3 class="anchored" data-anchor-id="alternate-method">Alternate Method</h3>
 <p>If the program is not present in the start menu, try to browse to the directory the program is stored in using Windows Explorer, typically the NASIS Editor client is located in “C:\Program Files (x86)\USDA\NASIS 7.1 Client” the program file name you will need to open is “NASISEditor.exe”.</p>
-<p><img src="explorer-screen.png" class="img-fluid"></p>
+<p><img src="explorer-screen.png" title="NASISEditor.exe icon and text application highlighted in the Windows Explorer Window" class="img-fluid" alt="NASISEditor.exe icon and text application highlighted in the Windows Explorer Window"></p>
 </section>
 <section id="request-support-if-needed" class="level3">
 <h3 class="anchored" data-anchor-id="request-support-if-needed">Request Support if Needed</h3>
-<p>If you are still unable to locate the NASIS Editor Client Software, it is possible it has not yet been installed on your computer. You should request installation assistance from an Information Technology Specialist via the OCIO Help Icon shortcut on the desktop or via the OCIO Help Icon on the windows taskbar. If you are not a USDA employee, you can find additional information on NASIS installation <a href="https://new.cloudvault.usda.gov/index.php/s/xFTJabHiT45WDom">here</a>.</p>
+<p>If you are still unable to locate the NASIS Editor Client Software, it is possible it has not yet been installed on your computer. You should request installation assistance from an Information Technology Specialist via the OCIO Help Icon shortcut on the desktop or via the OCIO Help Icon on the windows taskbar. If you are not a USDA employee, you can find additional information on NASIS installation <a href="https://new.cloudvault.usda.gov/index.php/s/xFTJabHiT45WDom">https://new.cloudvault.usda.gov/index.php/s/xFTJabHiT45WDom</a>.</p>
 </section>
 </section>
 <section id="login-to-nasis-and-initialize" class="level2">
@@ -154,13 +154,13 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="login-window" class="level3">
 <h3 class="anchored" data-anchor-id="login-window">Login Window</h3>
-<p>When you have successfully launched the NASIS Editor you will see a window appear which will either attempt to sign you in to the software automatically using desktop single sign-on, or you may need to select your sign-in method and enter the appropriate credentials. This could be using your LincPass card and PIN, or your eAuth username and password if you do not have a LincPass. If you do not have an account you can find additional instructions for requesting a NASIS account at the following site: <a href="https://www.nrcs.usda.gov/resources/education-and-teaching-materials/nasis-frequently-asked-questions">https://www.nrcs.usda.gov/resources/education-and-teaching-materials/nasis-frequently-asked-questions</a>. There is an alert in the login window indicating “You are using a browser that is no longer supported by USDA eAuthentication”. SPSD staff is aware of the alert, and there is no difference in functionality of the application at this time. The issue will be corrected in a future release of the NASIS client.</p>
-<p><img src="sign-in-screen.png" class="img-fluid"></p>
+<p>When you have successfully launched the NASIS Editor you will see a window appear which will either attempt to sign you in to the software automatically using desktop single sign-on, or you may need to select your sign-in method and enter the appropriate credentials. This could be using your LincPass card and PIN, or your eAuth username and password if you do not have a LincPass. If you do not have an account you can find additional instructions for requesting a NASIS account at the following site: <a href="https://www.nrcs.usda.gov/resources/education-and-teaching-materials/nasis-frequently-asked-questions" class="uri">https://www.nrcs.usda.gov/resources/education-and-teaching-materials/nasis-frequently-asked-questions</a>. There is an alert in the login window indicating “You are using a browser that is no longer supported by USDA eAuthentication”. SPSD staff is aware of the alert, and there is no difference in functionality of the application at this time. The issue will be corrected in a future release of the NASIS client.</p>
+<p><img src="sign-in-screen.png" title="NASIS Client eAuth Login window prompt" class="img-fluid" alt="NASIS Client eAuth Login window prompt"></p>
 </section>
 <section id="initialize-the-local-database" class="level3">
 <h3 class="anchored" data-anchor-id="initialize-the-local-database">Initialize the local database</h3>
 <p>When the login completes successfully, you will see a message that you must first initialize the local database before you can start using the software. This will take some time to complete, be patient! You can continue to use your computer while this finishes and you can observe the progress by viewing the progress window. When the process completes, the editor will open and will be ready to use. The editor window will appear as below.</p>
-<p><img src="nasis-screen.png" class="img-fluid"></p>
+<p><img src="nasis-screen.png" title="NASIS Client editor window" class="img-fluid" alt="NASIS Client editor window"></p>
 </section>
 </section>
 <section id="view-the-about-nasis-help-screen" class="level2">
@@ -168,14 +168,14 @@ ul.task-list li input[type="checkbox"] {
 <section id="locate-the-help-menu" class="level3">
 <h3 class="anchored" data-anchor-id="locate-the-help-menu">Locate the Help Menu</h3>
 <p>The help menu can be accessed by clicking the “Help” text on the upper left part of editor which also contains other text for menus such as “NASIS”, “Queries Explorer”, and “Editor”.</p>
-<p><img src="menu-screen.png" class="img-fluid"></p>
+<p><img src="menu-screen.png" title="NASIS Client menu bar with the help menu highlighted" class="img-fluid" alt="NASIS Client menu bar with the help menu highlighted"></p>
 </section>
 <section id="open-the-about-nasis-window" class="level3">
 <h3 class="anchored" data-anchor-id="open-the-about-nasis-window">Open the About NASIS Window</h3>
 <p>The help menu opens to reveal a list of options to select. Choose the “About…” option by clicking it.</p>
-<p><img src="help-screen.png" class="img-fluid"></p>
+<p><img src="help-screen.png" title="NASIS Client help menu with About... option highlighted" class="img-fluid" alt="NASIS Client help menu with About... option highlighted"></p>
 <p>The About NASIS window shows the NASIS Client Installed Version Number, Metadata Data Model Version, and Database File Size. This information can be shared with support staff to assist in troubleshooting issues with the NASIS Editor if needed. Take a screenshot of this information to send to your mentor.</p>
-<p><img src="about-screen.png" class="img-fluid"></p>
+<p><img src="about-screen.png" title="NASIS Client About NASIS window" class="img-fluid" alt="NASIS Client About NASIS window"></p>
 </section>
 </section>
 <section id="confirm-user-information" class="level2">
@@ -183,28 +183,28 @@ ul.task-list li input[type="checkbox"] {
 <section id="locate-the-nasis-menu" class="level3">
 <h3 class="anchored" data-anchor-id="locate-the-nasis-menu">Locate the NASIS Menu</h3>
 <p>The NASIS menu can be accessed by clicking the “NASIS” text on the upper left part of editor which also contains other text for menus such as “Queries Explorer”, “Editor”, and “Help”.</p>
-<p><img src="nasis-menu-screen.png" class="img-fluid"></p>
+<p><img src="nasis-menu-screen.png" title="NASIS Client menu bar with the NASIS menu highlighted" class="img-fluid" alt="NASIS Client menu bar with the NASIS menu highlighted"></p>
 </section>
 <section id="open-the-manage-user-profile-window" class="level3">
 <h3 class="anchored" data-anchor-id="open-the-manage-user-profile-window">Open the Manage User Profile Window</h3>
 <p>The NASIS menu opens to reveal a list of options to select. Choose the “Manage User Profile…” option by clicking it.</p>
-<p><img src="nasis-menu-user-screen.png" class="img-fluid"></p>
+<p><img src="nasis-menu-user-screen.png" title="NASIS Client NASIS menu with the Manage User Profile... option highlighted" class="img-fluid" alt="NASIS Client NASIS menu with the Manage User Profile... option highlighted"></p>
 </section>
 <section id="review-information" class="level3">
 <h3 class="anchored" data-anchor-id="review-information">Review Information</h3>
 <p>The Manage User Profile window shows information stored in the NASIS database about you as a user. It displays your windows login, name, description, phone, email address, default NASIS site, default NASIS group, and the date the object was last updated. Review the information and make any changes if necessary.</p>
-<p><img src="user-screen.png" class="img-fluid"></p>
+<p><img src="user-screen.png" title="NASIS Client Manage User Profile window" class="img-fluid" alt="NASIS Client Manage User Profile window"></p>
 </section>
 <section id="set-a-default-nasis-group" class="level3">
 <h3 class="anchored" data-anchor-id="set-a-default-nasis-group">Set a Default NASIS Group</h3>
 <p>If the Default NASIS group has not been set, you will need to choose a default NASIS group. This step is required before you can make edits or add new data to NASIS. Click the down arrow at the right of the default NASIS group attribute listed in the window to open a selection menu which will list all the groups of which you are currently a member. It is recommended to choose a point or pedon based group unique to your region and MLRA office, such as “NC-WAV Waverly, IA Projects”. The group you choose will be automatically populated as a data column for any new data you create. Consult with other local or regional staff familiar with NASIS or your mentor if you are unsure which group to select.</p>
-<p><img src="default-group.png" class="img-fluid"></p>
+<p><img src="default-group.png" title="NASIS Client Default NASIS Group choice list" class="img-fluid" alt="NASIS Client Default NASIS Group choice list"></p>
 <p>When you have finished choosing your default group, capture a screenshot of the Manage User Profile window to send to you mentor. You must also click the save button before closing the Manage User Profile window to keep any of the changes you have made.</p>
 </section>
 <section id="upload-changes" class="level3">
 <h3 class="anchored" data-anchor-id="upload-changes">Upload Changes</h3>
 <p>The final step to commit the changes you have made to your user profile is to upload all changes to the national database. Do this by selecting the “Upload All Changes to National Database” menu option.</p>
-<p><img src="upload-screen.png" class="img-fluid"></p>
+<p><img src="upload-screen.png" title="NASIS Client NASIS menu with the Upload All Changes to National Database option highlighted" class="img-fluid" alt="NASIS Client NASIS menu with the Upload All Changes to National Database option highlighted"></p>
 <p>When the upload is complete, you can exit the NASIS client by selecting “Exit” from the NASIS menu or by clicking the “X” close window icon in the upper right of the NASIS client window.</p>
 </section>
 </section>
@@ -217,7 +217,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="additional-resources" class="level2">
 <h2 class="anchored" data-anchor-id="additional-resources">Additional Resources</h2>
-<p><a href="https://www.nrcs.usda.gov/resources/education-and-teaching-materials/national-soil-information-system-nasis">https://www.nrcs.usda.gov/resources/education-and-teaching-materials/national-soil-information-system-nasis</a></p>
+<p><a href="https://www.nrcs.usda.gov/resources/education-and-teaching-materials/national-soil-information-system-nasis" class="uri">https://www.nrcs.usda.gov/resources/education-and-teaching-materials/national-soil-information-system-nasis</a></p>
 </section>
 
 </main>
