--- a/content/reports.html
+++ b/content/reports.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Soil and Plant Science Division Staff">
-<meta name="dcterms.date" content="2024-05-07">
+<meta name="dcterms.date" content="2024-05-08">
 
 <title>NASIS Basic Training</title>
 <style>
@@ -75,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
       <div>
       <div class="quarto-title-meta-heading">Published</div>
       <div class="quarto-title-meta-contents">
-        <p class="date">May 7, 2024</p>
+        <p class="date">May 8, 2024</p>
       </div>
     </div>
     
@@ -120,7 +120,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="read-the-t-factor-comparison-report" class="level3">
 <h3 class="anchored" data-anchor-id="read-the-t-factor-comparison-report">Read the T factor Comparison Report</h3>
-<p>In the Explorer pane Select the reports tab if not already selected. In the NSSC Pangaea folder find and open the report “UTIL - Comparison of T Factor, stored vs calculated - html N” and read the report description to determine the data elements needed for the report.&nbsp;</p>
+<p>In the Explorer pane Select the reports tab if not already selected. In the NSSC Pangaea folder find and open the report “UTIL - Comparison of T Factor, stored vs calculated - html N” and read the report description to determine the data elements needed for the report.</p>
 <p>Copy the data elements listed that are used to calculate the T factor report in the report description and paste into a document and submit by placing it in your exercise submission folder.</p>
 </section>
 </section>
@@ -140,7 +140,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="exercise-5.3-exporting-reports">Exercise 5.3 – Exporting Reports</h2>
 <p>Run report “<strong>AGR - DRY_NCCPI - MU Aggregated Small Grains Export”</strong>on Soil Survey Area Symbol MN075 or MN001, make sure the Geographic Applicability parameter is set to “current wherever mapped”.</p>
 <p>Copy the data from the .txt file and paste into Microsoft Excel, the data will be pasted into a single column. You will need to use text to columns feature in the Data tab. Delimit the data using the “|” pipe character.</p>
-<p><img src="excel.png" class="img-fluid"></p>
+<p><img src="excel.png" title="Microsoft Excel application showing the Data tab menu selected and the Text to Columns button highlighted" class="img-fluid" alt="Microsoft Excel application showing the Data tab menu selected and the Text to Columns button highlighted"></p>
 <p>This will separate the data into 6 columns, then sort the “Wtd_Small_grains_nccpi” values from the highest to lowest NCCPI rating for dryland small grains. Submit the .xlsx file by placing it in your exercise submission folder.</p>
 </section>
 
